--- a/webapp/view/Ncheader.view.xml
+++ b/webapp/view/Ncheader.view.xml
@@ -746,8 +746,8 @@
                                                         <VBox>
                                                             <Text />
                                                             <HBox>
-                                                                <RadioButton id="rbtPlyonBLineL" text="L" groupName="rbtPlyonBLineG" selected="{oPartLocationList>/ButtockLineLhs1}" />
-                                                                <RadioButton id="rbtPlyonBLineR" text="R" groupName="rbtPlyonBLineG" selected="{oPartLocationList>/ButtockLineRhs1}" />
+                                                                <RadioButton id="rbtPlyonBLineL" text="L" groupName="rbtPlyonBLineGB" selected="{oPartLocationList>/ButtockLineLhs1}" />
+                                                                <RadioButton id="rbtPlyonBLineR" text="R" groupName="rbtPlyonBLineGB" selected="{oPartLocationList>/ButtockLineRhs1}" />
                                                             </HBox>
                                                             <HBox />
                                                             <Text />
@@ -1010,7 +1010,7 @@
                                                         <Label text="As Per" />
                                                         <TextArea id="idDcInpAp" />
                                                         <Label text="Incomplete Flag" />
-                                                        <CheckBox id="idDcCbIf" class="sapUiLargeMarginBegin" selected="true" />
+                                                        <CheckBox id="idDcCbIf" class="sapUiLargeMarginBegin" selected="true" select="handleIncompleteFlagCheck" />
                                                         <!-- select="handleIncompleteFlagCheck" -->
                                                     </f:content>
                                                 </f:SimpleForm>
@@ -1115,19 +1115,20 @@
                                                     <!--<Text text=""/>-->
                                                     <Link text="{HeaderSignOffDetails>User}" />
                                                     <!--<Input value="" liveChange="onEnterText" valueHelpIconSrc="sap-icon://document-text" showValueHelp="true" valueHelpRequest="onNotesChange"/>-->
-                                                    <Input value="{HeaderSignOffDetails>SignOffNote}" editable="{HeaderSignOffDetails>RowEdit}"/>
-                                                    <Input value="{HeaderSignOffDetails>ActionCode}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true"/>
-                                                    <Text text="{HeaderSignOffDetails>DateInQueue}"/>
-                                                    <Text text="{HeaderSignOffDetails>ActualStart}"/>
-                                                    <Text text="{HeaderSignOffDetails>FinishDate}"/>
-                                                    <!--<Text text="{HeaderSignOffDetails>ActualStart}{HeaderSignOffDetails>ActualSTime}" />-->                                                    
+                                                    <Input value="{HeaderSignOffDetails>SignOffNote}" editable="{HeaderSignOffDetails>RowEdit}" />
+                                                    <Input value="{HeaderSignOffDetails>ActionCode}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true" />
+                                                    <Text text="{HeaderSignOffDetails>DateInQueue}" />
+                                                    <Text text="{HeaderSignOffDetails>ActualStart}" />
+                                                    <Text text="{HeaderSignOffDetails>FinishDate}" />
+                                                    <!--<Text text="{HeaderSignOffDetails>ActualStart}{HeaderSignOffDetails>ActualSTime}" />-->
                                                     <!--<Text text="{HeaderSignOffDetails>FinishDate}{HeaderSignOffDetails>FinishTime}" />-->
-                                                    <Input value="{HeaderSignOffDetails>Status}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffStatus"/>
-                                                    <Input value="{HeaderSignOffDetails>AR}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffAR"/>
-                                                    <Input value="{HeaderSignOffDetails>Comments}" editable="{HeaderSignOffDetails>RowEdit}"/>                                                    
-                                                    <Button icon="sap-icon://less" type="Reject" press="onDeleteHeaderSignOffLineItem"/>   
-                                                    <Text text="{HeaderSignOffDetails>Sequence}" visible="false"/>
-                                                    <Text text="{HeaderSignOffDetails>StatusText}" visible="false"/>                                                 
+                                                    <Input value="{HeaderSignOffDetails>Status}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffStatus" />
+                                                    <Input value="{HeaderSignOffDetails>AR}" editable="{HeaderSignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffAR" />
+                                                    <Input value="{HeaderSignOffDetails>Comments}" editable="{HeaderSignOffDetails>RowEdit}" />
+                                                    <Button icon="sap-icon://less" type="Reject" press="onDeleteHeaderSignOffLineItem" />
+                                                    <Text text="{HeaderSignOffDetails>Sequence}" visible="false" />
+                                                    <Text text="{HeaderSignOffDetails>StatusText}" visible="false" />
+                                                    <Text text="{HeaderSignOffDetails>WorkGroup}" visible="false" />
                                                 </cells>
                                             </ColumnListItem>
                                         </items>
@@ -1160,7 +1161,7 @@
                                             <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet">
                                                 <Text text="Date in Queue(Local)" />
                                             </Column>
-                                            <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet" >
+                                            <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet">
                                                 <Text text="Actual Start(Local)" />
                                             </Column>
                                             <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet">
@@ -1175,30 +1176,31 @@
                                             <Column hAlign="Left" width="8rem">
                                                 <Text text="Comments" />
                                             </Column>
-                                            <Column hAlign="Right" >
+                                            <Column hAlign="Right">
                                                 <Text text="" />
                                             </Column>
                                         </columns>
                                         <items>
                                             <ColumnListItem>
                                                 <cells>
-                                                    <Text text="{DiscrepancySignOffDetails>SignOffGroup}"/>
-                                                    <Text text="{DiscrepancySignOffDetails>DiscrepancyNo}"/>
-                                                    <Link text="{DiscrepancySignOffDetails>User}"/>
+                                                    <Text text="{DiscrepancySignOffDetails>SignOffGroup}" />
+                                                    <Text text="{DiscrepancySignOffDetails>DiscrepancyNo}" />
+                                                    <Link text="{DiscrepancySignOffDetails>User}" />
                                                     <!--<Input value="" liveChange="onEnterText" valueHelpIconSrc="sap-icon://document-text" showValueHelp="true" valueHelpRequest="onNotesChange"/>-->
-                                                    <Input value="{DiscrepancySignOffDetails>SignOffNote}" editable="{DiscrepancySignOffDetails>RowEdit}"/>
-                                                    <Input value="{DiscrepancySignOffDetails>ActionCode}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true"/>
-                                                    <Text text="{DiscrepancySignOffDetails>DateInQueue}"/>
+                                                    <Input value="{DiscrepancySignOffDetails>SignOffNote}" editable="{DiscrepancySignOffDetails>RowEdit}" />
+                                                    <Input value="{DiscrepancySignOffDetails>ActionCode}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true" />
+                                                    <Text text="{DiscrepancySignOffDetails>DateInQueue}" />
                                                     <Text text="{DiscrepancySignOffDetails>ActualStart}" />
                                                     <Text text="{DiscrepancySignOffDetails>FinishDate}" />
                                                     <!--<Text text="{DiscrepancySignOffDetails>ActualStart} {DiscrepancySignOffDetails>ActualSTime}" />-->
                                                     <!--<Text text="{DiscrepancySignOffDetails>FinishDate} {DiscrepancySignOffDetails>FinishTime}" />-->
-                                                    <Input value="{DiscrepancySignOffDetails>Status}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffStatus"/>
-                                                    <Input value="{DiscrepancySignOffDetails>AR}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffAR"/>
-                                                    <Input value="{DiscrepancySignOffDetails>Comments}" editable="{DiscrepancySignOffDetails>RowEdit}"/>                                                    
-                                                    <Button icon="sap-icon://less" type="Reject" press="onDeleteDiscSignOffLineItem"/>
-                                                    <Text text="{DiscrepancySignOffDetails>Sequence}" visible="false"/>
-                                                    <Text text="{DiscrepancySignOffDetails>StatusText}" visible="false"/>
+                                                    <Input value="{DiscrepancySignOffDetails>Status}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffStatus" />
+                                                    <Input value="{DiscrepancySignOffDetails>AR}" editable="{DiscrepancySignOffDetails>RowEdit}" showValueHelp="true" valueHelpRequest="onHeadersingoffAR" />
+                                                    <Input value="{DiscrepancySignOffDetails>Comments}" editable="{DiscrepancySignOffDetails>RowEdit}" />
+                                                    <Button icon="sap-icon://less" type="Reject" press="onDeleteDiscSignOffLineItem" />
+                                                    <Text text="{DiscrepancySignOffDetails>Sequence}" visible="false" />
+                                                    <Text text="{DiscrepancySignOffDetails>StatusText}" visible="false" />
+                                                    <Text text="{DiscrepancySignOffDetails>WorkGroup}" visible="false" />
                                                 </cells>
                                             </ColumnListItem>
                                         </items>
@@ -1247,7 +1249,7 @@
                                                         <Label text="Inter Chargeability Affected" />
                                                         <CheckBox id="dispGenInterCharge" text="" />
                                                         <Label text="Major/Minor NC" />
-                                                        <ComboBox id="dispGenMajorMinorNC" items="{DispoMajMinNCModel>/}" showSecondaryValues="true" selectionChange="handleChangeMajorMinorNC" >
+                                                        <ComboBox id="dispGenMajorMinorNC" items="{DispoMajMinNCModel>/}" showSecondaryValues="true" selectionChange="handleChangeMajorMinorNC">
                                                             <core:ListItem key="{DispoMajMinNCModel>Key}" text="{DispoMajMinNCModel>Value}" additionalText="{DispoMajMinNCModel>Description}" />
                                                         </ComboBox>
                                                         <Label text="Rework Order" />
@@ -1406,7 +1408,7 @@
                                             </Toolbar>
                                         </headerToolbar>
                                         <columns>
-                                            <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet" width="14%" >
+                                            <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet" width="14%">
                                                 <Text text="Buyoff Group" />
                                             </Column>
                                             <Column hAlign="Left" demandPopin="true" minScreenWidth="tablet" width="14%">
@@ -1434,12 +1436,22 @@
                                         <items>
                                             <ColumnListItem>
                                                 <cells>
-                                                    <Input value="{DispositionBuyOffModel>DispositionGroup}" showValueHelp="true" valueHelpRequest="onOpenVHBuyOffGroup" editable ="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
-                                                    <Input value="{DispositionBuyOffModel>WorkCenter}" showValueHelp="true" valueHelpRequest="onOpenVHNCCreated" editable ="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
+                                                    <Input
+                                                        value="{DispositionBuyOffModel>DispositionGroup}"
+                                                        showValueHelp="true"
+                                                        valueHelpRequest="onOpenVHBuyOffGroup"
+                                                        editable="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}"
+                                                    />
+                                                    <Input value="{DispositionBuyOffModel>WorkCenter}" showValueHelp="true" valueHelpRequest="onOpenVHNCCreated" editable="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
                                                     <Text text="{DispositionBuyOffModel>BuyOffUser}" />
                                                     <Text text="{DispositionBuyOffModel>BuyOffDate}" />
-                                                    <Input value="{DispositionBuyOffModel>BuyOffStatusText}" showValueHelp="true" valueHelpRequest="onOpenVHBuyOffStatus" editable ="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
-                                                    <TextArea value="{DispositionBuyOffModel>BuyOffComment}" rows="3" maxLength="1024" width="100%" editable ="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
+                                                    <Input
+                                                        value="{DispositionBuyOffModel>BuyOffStatusText}"
+                                                        showValueHelp="true"
+                                                        valueHelpRequest="onOpenVHBuyOffStatus"
+                                                        editable="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}"
+                                                    />
+                                                    <TextArea value="{DispositionBuyOffModel>BuyOffComment}" rows="3" maxLength="1024" width="100%" editable="{= ${DispositionBuyOffModel>DispositionSequence} === '' ? true : ${DispositionBuyOffModel>RowEdit} === true ? true : false}" />
                                                     <Text text="{DispositionBuyOffModel>DispositionSequence}" />
                                                     <Text text="{DispositionBuyOffModel>BuyOffStatusKey}" />
                                                 </cells>
